--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
